# zkp-protocol

./: .env.example  Cargo.toml  Dockerfile-client  Dockerfile-server  LICENSE  README.md  docker-compose.yaml
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs
