[package]
name = "zkp_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
tonic = "0.10"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
rand = "0.8.4"
dotenv = "0.15.0"

[build-dependencies]
prost-build = "0.9"
tonic-build = "0.10"


[[bin]]
name = "client"
path = "src/client.rs"


[[bin]]
name = "server"
path = "src/server.rs"